@@ -4,6 +4,7 @@ New in version 1.6.0 (XXX 2015)
  * Use maven to resolve dependencies, from Hendy Irawan.
  * Remove support for OpenNLP version 1.4 and earlier.
  * Remove support for anaphora resolution (it's now in opencog).
+ * Remove support for lexical chunking (it doesn't belong here).
 
 New in version 1.5.1 (3 April 2014)
  * Extensive fixes for comparatives, from Rodas Solomon.
